# dna-manipulations

./: pyproject.toml
dna_manip/: codon.py
